--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/logos/favicon.svg" type="image/x-icon">
     <title>Conexos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -17,7 +17,8 @@
         <div class="container">
             <div class="row">
                 <div class="col d-flex justify-content-between align-content-center">
-                    <img src="imagens/logo-header.svg" alt="Logo Conexos">
+                    <a href="index.html" class="logo-link"><img src="imagens/logos/logo-header.svg" alt="Logo Conexos"
+                            class="logo-header"></a>
                     <nav>
                         <ul class="menu">
                             <li> <a href="index.html">Início</a> </li>
@@ -44,115 +45,189 @@
         </div>
     </header>
 
-    <main> 
-        
+    <main>
 
-        <h2 class="text-center my-3 my-xl-5">CONHEÇA NOSSOS PLANOS</h2>
+        <!-- carrosel -->
 
-        <div class="container">
-            <div class="row mx-auto">
-                <div class="d-flex flex-row justify-content-around">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
 
-                    <div class="col-3 col-md-3 col-xxl-3 pb-3">
-                        <div class="card">
-                            <h5 class="card-title text-center my-2">Bronze</h5>
-                            <img src="./imagens/ilustra-1.svg" alt="mulher com crianças fazendo joinha.">
-                            <div class="card-body">
-                                <p class="card-text">Plano ideal para espaços residenciais com pequenas famílias.
-                                </p>
-                                <ul>
-                                    <li>Internet fibra 200 mega</li>
-                                    <li>Dowload até 200 Mbps</li>
-                                    <li>Wi-fi grátis</li>
-                                </ul>
-                                <p class="valor">R$ 100,00</p>
-                                <div class="text-center">
-                                    <a href="bronze.html" class="btn btn-success">Escolher plano</a>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="img-fluid d-md-none" src="./imagens/banner1/banner1-mobile.svg"
+                        alt="Modelo feminina com blusa verde apontando para texto a cima.">
+                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner1/banner1-tablet.svg"
+                        alt="Modelo femina com blusa verde apontando para texto ao lado direito.">
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner1/banner1-desk.svg"
+                        alt="Modelo feminina com blusa verde apontando para texto ao lado direito.">
+                </div>
+                <div class="carousel-item">
+                    <img class="img-fluid d-md-none" src="./imagens/banner2/banner2-mobile.svg"
+                        alt="Texto acima e imagem de roteador abaixo.">
+                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner2/banner2-tablet.svg"
+                        alt="Texto ao lado esquerdo e uma imagem de roteador a direita.">
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner2/banner2-desk.svg"
+                        alt="Texto ao lado esquerdo e uma imagem de roteador a direita.">
+                </div>
+
+                <div class="carousel-item">
+                    <img class="img-fluid d-md-none" src="./imagens/banner3/banner3-mobile.svg"
+                        alt="Texto a cima e abaixo 3 mulher e 2 homens em quadrados a direita.">
+                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner3/banner3-tablet.svg"
+                        alt="Texto a esquerda e 3 mulher e 2 homens em quadrados a direita.">
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner3/banner3-desk.svg"
+                        alt="Texto a esquerda e 3 mulher e 2 homens em quadrados a direita.">
+                </div>
+
+            </div>
+        </div>
+
+        <!-- planos -->
+        <h2 class="text-center my-3 my-md-5 my-xl-5">CONHEÇA NOSSOS PLANOS</h2>
+
+        <div class="card-planos-index">
+            <div class="container">
+                <div class="row-lg column mx-0">
+                    <div class="d-flex flex-column flex-lg-row justify-content-around">
+
+                        <div class="col-12 col-md-12 col-lg-3 pb-3">
+                            <div class="card">
+                                <h5 class="card-title text-center my-2">Bronze</h5>
+                                <img src="./imagens/ilustra-planos/ilustra-1.svg"
+                                    alt="Mulher de verde tocando ombro de duas crianças usando roupas verdes fazendo joinha.">
+                                <div class="card-body">
+                                    <p class="card-texto">Plano ideal para espaços residenciais com pequenas
+                                        famílias.
+                                    </p>
+                                    <ul>
+                                        <li>Internet fibra 200 mega</li>
+                                        <li>Dowload até 200 Mbps</li>
+                                        <li>Wi-fi grátis</li>
+                                    </ul>
+                                    <p class="valor">R$ 100,00</p>
+                                    <div class="text-center">
+                                        <a href="bronze.html" class="btn btn-success border-0">Escolher plano</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="col-3 col-md-3 col-xxl-3 pb-3">
-                        <div class="card">
-                            <h5 class="card-title text-center my-2">Prata</h5>
-                            <img src="./imagens/ilustra-2.svg" alt="um time de 2 mulheres e 2 homens se comunicando.">
-                            <div class="card-body">
-                                <p class="card-text">Plano ideal para espaços residenciais com grandes famílias ou
-                                    startups.
-                                </p>
-                                <ul>
-                                    <li>Internet fibra 400 mega</li>
-                                    <li>Dowload até 400 Mbps</li>
-                                    <li>Wi-fi grátis</li>
-                                </ul>
-                                <p class="valor">R$ 200,00</p>
-                                <div class="text-center">
-                                    <a href="prata.html" class="btn btn-success">Escolher plano</a>
+                        <div class="col-12 col-md-12 col-lg-3 pb-3">
+                            <div class="card">
+                                <h5 class="card-title text-center my-2">Prata</h5>
+                                <img src="./imagens/ilustra-planos/ilustra-2.svg"
+                                    alt="Um time de duas mulheres e dois homens se comunicando.">
+                                <div class="card-body">
+                                    <p class="card-texto">Plano ideal para espaços residenciais com grandes
+                                        famílias ou
+                                        startups.
+                                    </p>
+                                    <ul>
+                                        <li>Internet fibra 400 mega</li>
+                                        <li>Dowload até 400 Mbps</li>
+                                        <li>Wi-fi grátis</li>
+                                    </ul>
+                                    <p class="valor">R$ 200,00</p>
+                                    <div class="text-center">
+                                        <a href="prata.html" class="btn btn-success border-0">Escolher plano</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="col-3 col-md-3 col-xxl-3 pb-3">
-                        <div class="card">
-                            <h5 class="card-title text-center my-2">Ouro</h5>
-                            <img src="./imagens/ilustra-3.svg"
-                                alt="vários ambientes com várias pessoas trablhando ao mesmo tempo.">
-                            <div class="card-body">
-                                <p class="card-text">Plano ideal para espaços empresariais de alta demanda que precisem
-                                    de maior alcance.</p>
-                                <ul>
-                                    <li>Internet fibra 1 Giga</li>
-                                    <li>Dowload até 1 Giga</li>
-                                    <li>Wi-fi grátis</li>
-                                </ul>
-                                <p class="valor">R$ 599,99</p>
-                                <div class="text-center">
-                                    <a href="ouro.html" class="btn btn-success">Escolher plano</a>
+                        <div class="col-12 col-md-12 col-lg-3 pb-3">
+                            <div class="card">
+                                <h5 class="card-title text-center my-2">Ouro</h5>
+                                <img src="./imagens/ilustra-planos/ilustra-3.svg"
+                                    alt="Vários ambientes com várias pessoas trabalhando ao mesmo tempo.">
+                                <div class="card-body">
+                                    <p class="card-texto">Plano ideal para espaços empresariais de alta demanda
+                                        que
+                                        precisem
+                                        de maior alcance.</p>
+                                    <ul>
+                                        <li>Internet fibra 1 Giga</li>
+                                        <li>Dowload até 1 Giga</li>
+                                        <li>Wi-fi grátis</li>
+                                    </ul>
+                                    <p class="valor">R$ 599,99</p>
+                                    <div class="text-center">
+                                        <a href="ouro.html" class="btn btn-success border-0">Escolher plano</a>
+                                    </div>
                                 </div>
                             </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="solicitacao-1">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-12 col-lg-6">
+
+                        <div class="img-status">
+                            <img class="img-fluid d-none d-xl-block"
+                                src="./imagens/ilustra-planos/ilustra-status-lg.svg"
+                                alt="Mulher em pé verificando o celular com mensagen de texto.">
+                            <img class="img-fluid d-none d-md-block d-xl-none"
+                                src="./imagens/ilustra-planos/ilustra-status-md.svg"
+                                alt="Mulher em pé verificando o celular com mensagen de texto.">
+                            <img class="img-fluid d-md-none" src="./imagens/ilustra-planos/ilustra-status-sm.svg"
+                                alt="Mulher em pé verificando o celular com mensagen de texto.">
+                        </div>
+
+                    </div>
+
+                    <div class="col-12 col-md-12 col-lg-6">
+                        <div class="visita">
+                            <h2 class="tittle ">STATUS DE SOLICITAÇÕES</h2>
+                            <p>Após contratar um plano, você receberá um código via SMS para acompanhar o
+                                andamento da solicitação e agendamento da visita técnica</p>
+
+                            <div class="button">
+                                <a href="status.html" class="btn btn-success border-0">Verificar status</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </main>
 
+    <footer class="text-left">
+        <section class="container p-4 pb-2 mb-4 d-flex justify-content-around">
+          <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block" src="imagens/logos/conexos-logo-footer.png"
+            alt="Logo Conexos"></a>
 
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <img src="imagens/conexos-logo-footer.png" alt="Logo Conexos">
-            </div>
-            <div class="col">
-                <p>Empresa criada visando a diversidade dos clientes.<br>
-                    Acreditamos que apresentando de maneira simples<br> os benefícios de cada plano, fica a total
-                    escolha<br>do
-                    cliente, com um sistema simples para solicitar.</p>
-            </div>
-
-            <div class="col">
-                <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="status.html">Status de solicitações</a></li>
-                    <li><a href="bronze.html">Bronze</a></li>
-                    <li><a href="prata.html">Prata</a></li>
-                    <li><a href="ouro.html">Ouro</a></li>
-                </ul>
-            </div>
-
-        </div>
+            <p class="fs-small fw-lighter text-justify">Empresa criada visando a diversidade dos clientes.
+                Acreditamos que apresentando de maneira simples os benefícios de cada plano, fica a total
+                escolha do cliente, com um sistema simples para solicitar.</p>
+         
+                <ul class="text-left">
+            <li><a href="index.html">Início</a></li>
+            <li><a href="bronze.html">Bronze</a></li>
+            <li><a href="prata.html">Prata</a></li>
+            <li><a href="ouro.html">Ouro</a></li>
+            <li><a href="status.html">Status de solicitações</a></li>
+        </ul>
+        </section>
 
         <div class="copyright">
-            <p>Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy</p>
+        <div class="p-3 text-center fs-small fw-lighter">
+            2023 <i class="bi bi-c-circle"></i> Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy
         </div>
+    </div>
 
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
