--- a/prata.html
+++ b/prata.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/logos/favicon.svg" type="image/x-icon">
     <title>Conexos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -17,7 +17,8 @@
         <div class="container">
             <div class="row">
                 <div class="col d-flex justify-content-between align-content-center">
-                    <img src="imagens/logo-header.svg" alt="Logo Conexos">
+                    <a href="index.html" class="logo-link"><img src="imagens/logos/logo-header.svg" alt="Logo Conexos"
+                            class="logo-header"></a>
                     <nav>
                         <ul class="menu">
                             <li> <a href="index.html">Início</a> </li>
@@ -47,96 +48,113 @@
 
     <main>
 
-        <div class="info-planos">
-            <h3 class="tittle my-5">Plano Prata</h3>
-            <p>Plano ideal para espaços residenciais com grandes famílias ou
-                startups.</p>
-            <p>A velocidade anunciada de acesso de tráfego na internet é nominal máxima, podendo sofrer variações
-                decorrentes de fatores externos. Consulte a disponibilidade na sua localidade. Assistência Home Assist
-                válida até por 30 dias, a partir da data de instalação.</p>
-            <ul>
-                <li>Internet fibra 400 mega</li>
-                <li>Dowload até 400 Mbps</li>
-                <li>Wi-fi grátis</li>
-            </ul>
-            <p class="valor">R$ 200,00</p>
+        <!-- DESCRIÇÃO DOS PLANOS -->
+        <div class="planos-main">
+            <div class="info-planos">
+                <div class="row">
+                <h3 class="tittle my-5 col-12 col-md-12">Plano Prata</h3>
+                <p>Plano ideal para espaços residenciais com grandes
+                    famílias ou
+                    startups.</p>
+                <p>A velocidade anunciada de acesso de tráfego na internet é nominal máxima,
+                    podendo sofrer variações
+                    decorrentes de fatores externos. Consulte a disponibilidade na sua localidade. Assistência Home
+                    válida até por 30 dias, a partir da data de instalação.</p>
+                <ul>
+                    <li>Internet fibra 400 mega</li>
+                    <li>Dowload até 400 Mbps</li>
+                    <li>Wi-fi grátis</li>
+                </ul>
+                <p class="text-left">R$ 200,00</p>
+            </div>
+        </div>
+        
+            <img class="img-fluid d-none d-md-none d-xl-block" src="./imagens/ilustra-planos/ilustra-2.svg" alt="Um time de duas mulheres e dois homens se comunicando." width="499px"
+                height="405px">
+
         </div>
 
+        <!-- Fomúlario Contratação -->
         <div class="form-container">
 
             <div class="card" style="width: 40rem;">
                 <div class="card-body my-2">
                     <form>
-                        <h1 class="Titulo-form-plano">Contratação do plano</h1>
+                        <h1 class="Titulo-form-plano my-2">Contratação do plano</h1>
                         <div class="card-text">
-                        <div class="col-5">
-                            <div class="mb-3">
-                                <label for="nome" class="form-label col-form-label-sm">Nome Completo</label>
-                                <input type="nome" class="form-control" id="Nome">
-                            </div>
-                            <div class="mb-3">
-                                <label for="cpf" class="form-label col-form-label-sm">CPF</label>
-                                <input type="cpf" class="form-control" id="cpf">
-                            </div>
-                            <div class="mb-3">
-                                <label for="Telefone" class="form-label col-form-label-sm">Telefone para contato</label>
-                                <input type="telefone" class="form-control" id="telefone">
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label col-form-label-sm">Insira seu Email</label>
-                                <input type="email" class="form-control" id="email">
-                            </div>
-                            <div class="mb-3">
-                                <label for="plano" class="form-label col-form-label-sm">Selecione o plano</label>
-                                <select class="form-select">
-                                    <option value="1">Bronze</option>
-                                    <option value="2">Prata</option>
-                                    <option value="3">Ouro</option>
-                                </select>
-                            </div>
-                            <div class="mb-3">
-                                <label for="plano" class="form-label col-form-label-sm">Preferência de horario para visita
-                                    técnica</label>
-                                <select class="form-select">
-                                    <option value="1">8:00 ás 12:00</option>
-                                    <option value="2">12:00 ás 16:00</option>
-                                    <option value="3">16:00 ás 20:00</option>
-                                </select>
+                            <div class="col-5">
+                                <div class="mb-3">
+                                    <label for="nome" class="form-label col-form-label-sm my-3">Nome Completo</label>
+                                    <input type="nome" class="form-control" id="Nome">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="cpf" class="form-label col-form-label-sm">CPF</label>
+                                    <input type="cpf" class="form-control" id="cpf">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="Telefone" class="form-label col-form-label-sm">Telefone para
+                                        contato</label>
+                                    <input type="telefone" class="form-control" id="telefone">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label col-form-label-sm">Insira seu Email</label>
+                                    <input type="email" class="form-control" id="email">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="plano" class="form-label col-form-label-sm">Selecione o plano</label>
+                                    <select class="form-select">
+                                        <option value="1">Bronze</option>
+                                        <option value="2">Prata</option>
+                                        <option value="3">Ouro</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="plano" class="form-label col-form-label-sm">Preferência de horario para
+                                        visita
+                                        técnica</label>
+                                    <select class="form-select">
+                                        <option value="1">8:00 ás 12:00</option>
+                                        <option value="2">12:00 ás 16:00</option>
+                                        <option value="3">16:00 ás 20:00</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <div class="d-grid gap">
+                                        <button class="btn btn-success border-0" type="button">Contratar</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </form>
                 </div>
+                </form>
             </div>
         </div>
+        </div>
+
     </main>
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <img src="imagens/conexos-logo-footer.png" alt="Logo Conexos">
-            </div>
-            <div class="col">
-                <p>Empresa criada visando a diversidade dos clientes.<br>
-                    Acreditamos que apresentando de maneira simples<br> os benefícios de cada plano, fica a total
-                    escolha<br>do
-                    cliente, com um sistema simples para solicitar.</p>
-            </div>
+    <footer class="text-left">
+        <section class="container p-4 pb-2 mb-4 d-flex justify-content-around">
+          <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block" src="imagens/logos/conexos-logo-footer.png"
+            alt="Logo Conexos"></a>
 
-            <div class="col">
-                <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="status.html">Status de solicitações</a></li>
-                    <li><a href="bronze.html">Bronze</a></li>
-                    <li><a href="ouro.html">Ouro</a></li>
-                </ul>
-            </div>
-
-        </div>
+            <p class="fs-small fw-lighter text-justify">Empresa criada visando a diversidade dos clientes.
+                Acreditamos que apresentando de maneira simples os benefícios de cada plano, fica a total
+                escolha do cliente, com um sistema simples para solicitar.</p>
+         
+                <ul class="text-left">
+            <li><a href="index.html">Início</a></li>
+            <li><a href="bronze.html">Bronze</a></li>
+            <li><a href="ouro.html">Ouro</a></li>
+            <li><a href="status.html">Status de solicitações</a></li>
+        </ul>
+        </section>
 
         <div class="copyright">
-            <p>Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy</p>
+        <div class="p-3 text-center fs-small fw-lighter">
+            2023 <i class="bi bi-c-circle"></i> Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy
         </div>
+    </div>
 
     </footer>
 
