--- a/index.html
+++ b/index.html
@@ -53,28 +53,29 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="img-fluid d-md-none" src="./imagens/banner1/banner1-mobile.svg"
+                    <img class="img-fluid d-md-none" src="./imagens/banner1/banner1-mobile.png"
                         alt="Modelo feminina com blusa verde apontando para texto a cima.">
-                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner1/banner1-tablet.svg"
+                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner1/banner1-tablet.png"
                         alt="Modelo femina com blusa verde apontando para texto ao lado direito.">
-                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner1/banner1-desk.svg"
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner1/banner1-desk.png"
                         alt="Modelo feminina com blusa verde apontando para texto ao lado direito.">
                 </div>
+                
                 <div class="carousel-item">
-                    <img class="img-fluid d-md-none" src="./imagens/banner2/banner2-mobile.svg"
+                    <img class="img-fluid d-md-none" src="./imagens/banner2/banner2-mobile.png"
                         alt="Texto acima e imagem de roteador abaixo.">
-                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner2/banner2-tablet.svg"
+                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner2/banner2-tablet.png"
                         alt="Texto ao lado esquerdo e uma imagem de roteador a direita.">
-                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner2/banner2-desk.svg"
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner2/banner2-desk.png"
                         alt="Texto ao lado esquerdo e uma imagem de roteador a direita.">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="img-fluid d-md-none" src="./imagens/banner3/banner3-mobile.svg"
+                    <img class="img-fluid d-md-none" src="./imagens/banner3/banner3-mobile.png"
                         alt="Texto a cima e abaixo 3 mulher e 2 homens em quadrados a direita.">
-                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner3/banner3-tablet.svg"
+                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner3/banner3-tablet.png"
                         alt="Texto a esquerda e 3 mulher e 2 homens em quadrados a direita.">
-                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner3/banner3-desk.svg"
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner3/banner3-desk.png"
                         alt="Texto a esquerda e 3 mulher e 2 homens em quadrados a direita.">
                 </div>
 
